# macc

./: .gitignore  CHANGELOG.md  MACC.md  README.md
.github/workflows/: ci.yml
adapters/claude/src/: adapter.rs  map.rs
adapters/shared/src/: catalog.rs
automat/: coordinator.sh  coordinator_legacy.sh  merge_worker.sh  performer.sh
automat/hooks/: ai-merge-fix.sh
automat/legacy_coordinator/: events.sh  jobs.sh  runtime.sh  state.sh  vcs.sh
automat/skills/coordinator/: SKILL.md
automat/tests/: run.sh
catalog/: skills.catalog.json
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: apply.rs  backups.rs  catalog.rs  clear.rs  context.rs  coordinator.rs  doctor.rs  init.rs  install.rs  logs.rs  migrate.rs  mod.rs  plan.rs  quickstart.rs  restore.rs  tool.rs  worktree.rs
cli/src/coordinator/: args.rs  command.rs  control_plane.rs  helpers.rs  logs.rs  mod.rs  render.rs  sessions.rs  state.rs  state_runtime.rs  types.rs
cli/src/services/: backups.rs  catalog.rs  context.rs  lifecycle.rs  logs.rs  mod.rs  ops.rs  project.rs  tooling.rs  worktree.rs
core/: Cargo.toml
core/src/: automation.rs  catalog.rs  coordinator.rs  coordinator_storage.rs  doctor.rs  engine.rs  git.rs  lib.rs  skills.rs  worktree.rs
core/src/catalog/: service.rs
core/tests/: plan_operations.rs
docs/: CONFIG.md  COORDINATOR_REALTIME.md  README.md
docs/schemas/: coordinator-event.v1.schema.json
registry/tools.d/: claude.tool.yaml  codex.tool.yaml  gemini.tool.yaml
scripts/: install.sh  uninstall.sh
tui/: Cargo.toml
tui/src/: lib.rs  screen.rs  state.rs  ui.rs
(+32 files in other folders)
